renamed option "WriteBufferSize" into "WriteBuffer"; changed the dimension - now option is set in kilobytes instead of bytes; old name and value are automatically converted; if the size of article is below the value defined by the option, the buffer is allocated with the articles size (to not waste memory); therefore the special value "-1" is not required anymore; during conversion "-1" is replaced with "1024" (1 megabyte) but it can be of course manually changed to any other value later
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1058 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -620,33 +620,45 @@ PropagationDelay=0
 # disable it.
 Decode=yes
 
-# Memory limit to use for article cache (megabytes).
+# Memory limit for article cache (megabytes).
 #
-# If you can dedicate few hundreds of megabytes for article cache it
-# can improve performance. First the amount of disk operations can be
-# significantly reduced. Second the created files are less
-# fragmented, which again speeds up the post-processing (unpacking).
+# Article cache helps to improve performance. First the amount of disk
+# operations can be significantly reduced. Second the created files are
+# less fragmented, which again speeds up the post-processing (unpacking).
+#
+# The article cache works best with option <DirectWrite> which can
+# effectively use even small cache (like 50 MB).
+#
+# If option <DirectWrite> is disabled the cache should be big enough to
+# hold all articles of one file (typically up to 200 MB, sometimes even
+# 500 MB). Otherwise the articles are written into temporary directory
+# when the cache is full, which degrades performance.
 #
 # Value "0" disables article cache.
 #
 # In 32 bit mode the maximum allowed value is 1900.
+#
+# NOTE: Also see option <WriteBuffer>.
 ArticleCache=0
 
 # Write decoded articles directly into destination output file (yes, no).
 #
-# This option is important if article cache (option <ArticleCache>) is
-# not active. When article cache is used this option have little effect.
-#
 # Files are posted to Usenet in multiple pieces (articles). Each file
 # typically consists of hundreds of articles.
 #
-# When option <DirectWrite> is disabled, the program downloads all articles
-# into temporary directory and then combines them into destination file.
+# When option <DirectWrite> is disabled and the article cache (option
+# <ArticleCache>) is not active or is full the program saves downloaded
+# articles into temporary directory and later reads them all to write
+# again into the destination file.
 #
-# With this option enabled the program at first creates the output
-# destination file with required size (total size of all articles),
-# then writes the decoded articles directly to the file without 
-# creating of any temporary files.
+# When option <DirectWrite> is enabled the program at first creates the
+# output destination file with required size (total size of all articles),
+# then writes the articles directly to this file without creating of any
+# temporary files. If article cache (option <ArticleCache>) is active
+# the downloaded articles are saved into cache first and are written
+# into the destination file when the cache flushes. This happen when
+# all articles of the file are downloaded or when the cache becomes
+# full to 90%.
 #
 # The direct write relies on the ability of file system to create 
 # empty files without allocating the space on the drive (sparse files),
@@ -654,40 +666,36 @@ ArticleCache=0
 # and NTFS. The notable exception is HFS+ (default file system on OSX).
 #
 # The direct write usually improves performance by reducing the amount
-# of disk operations but may produce more fragmented files.
-#
-# NOTE: If article cache is not active it's recommended to test how
-# the option behaves on your platform. For a test try to download few
-# big nzb-files (each 4GB or more) and measure the time used for download
-# and unpack (use timestamps in the log-file to determine when the
-# unpack was ended).
+# of disk operations but may produce more fragmented files when used
+# without article cache.
 DirectWrite=yes
 
-# Memory buffer size per article (bytes).
+# Memory limit for per article write buffer (kilobytes).
 #
 # When downloaded articles are written into disk the OS collects
 # data in the internal buffer before flushing it into disk. This option
-# controls the size of this buffer (per article).
+# controls the size of this buffer per connection/download thread.
 #
-# Bigger values decrease disk-io, but increase memory usage. Value "0"
-# causes an OS-dependent default value to be used. With value "-1"
-# (which means "max/auto") the program sets the size of buffer according 
-# to the size of current article (typically less than 500K).
+# Larger buffers decrease the amount of disk operations and help
+# producing less fragmented files speeding up the post-processing
+# (unpack).
 #
-# To calculate the memory usage multiply WriteBufferSize by max number
-# of connections, configured in section "NEWS-SERVERS". Typical article's
-# size not exceed 500000 bytes, so using bigger values
-# (like several megabytes) will just waste memory, use "-1" instead.
-#
-# For desktop computers with large amount of memory value "-1" (max/auto)
-# is recommended, but for computers with very low memory (routers, NAS)
-# value "0" (default OS-dependent size) could be a better alternative.
+# To calculate the maximum memory required for all download threads multiply
+# WriteBuffer by number of connections configured in section
+# "NEWS-SERVERS". The option sets the limit, the actual buffer can be
+# smaller if the article size (typically about 500 KB) is below the limit.
 #
 # Write-buffer is managed by OS (system libraries) and therefore
 # the effect of the option is highly OS-dependent.
 #
+# Recommended value for computers with enough memory: 1024.
+#
+# Value "0" disables the setting of buffer size. In this case a buffer
+# of default size (OS and compiler specific) is used, which is usually
+# too small (1-4 KB) and therefore not optimal.
+#
 # NOTE: Also see option <ArticleCache>.
-WriteBufferSize=0
+WriteBuffer=0
 
 # Check CRC of downloaded and decoded articles (yes, no).
 #
