added log file rotation; options "CreateLog" and "ResetLog" replaced with new option "WriteLog (none, append, reset, rotate)"; new option "RotateLog" defines rotation period; when compiled in debug mode new field "process id" is printed to the file log for each row (it is easier to identify processes than threads)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1059 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -91,7 +91,7 @@ LockFile=${MainDir}/nzbget.lock
 
 # Where to store log file, if it needs to be created.
 #
-# NOTE: See also option <CreateLog>.
+# NOTE: See also option <WriteLog>.
 LogFile=${DestDir}/nzbget.log
 
 # Configuration file template.
@@ -837,11 +837,20 @@ UrlForce=yes
 ##############################################################################
 ### LOGGING                                                                ###
 
-# Create log file (yes, no).
-CreateLog=yes
+# How to use log file (none, append, reset, rotate).
+#
+#  none   - do not write into log file;
+#  append - append to the existing log file or create it;
+#  reset  - delete existing log file on program start and create a new one;
+#  rotate - create new log file for each day, delete old files,
+#           see option <RotateLog>.
+WriteLog=append
 
-# Delete log file upon server start (only in server-mode) (yes, no).
-ResetLog=no
+# Log file rotation period (days).
+#
+# Defines how long to keep old log-files, when log rotation is active
+# (option <WriteLog> is set to "rotate").
+RotateLog=3
 
 # How error messages must be printed (screen, log, both, none).
 ErrorTarget=both
