--- a/config.h.in
+++ b/config.h.in
@@ -67,11 +67,14 @@
 /* Define to 1 to use OpenSSL library for TLS/SSL-support. */
 #undef HAVE_OPENSSL
 
-/* Define to 1 if libpar2 has recent bugfixes-patch (version 2) */
-#undef HAVE_PAR2_BUGFIXES_V2
+/* Define to 1 if libpar2 supports block-scan (needs a special patch) */
+#undef HAVE_PAR2_BLOCKSCAN
 
 /* Define to 1 if libpar2 supports cancelling (needs a special patch) */
 #undef HAVE_PAR2_CANCEL
+
+/* Define to 1 if libpar2 supports external verification */
+#undef HAVE_PAR2_CRCPATCH
 
 /* Define to 1 if you have the <regex.h> header file. */
 #undef HAVE_REGEX_H
