--- a/nzbget.conf
+++ b/nzbget.conf
@@ -852,6 +852,7 @@ WriteLog=append
 # (option <WriteLog> is set to "rotate").
 RotateLog=3
 
+
 # How error messages must be printed (screen, log, both, none).
 ErrorTarget=both
 
@@ -1070,6 +1071,17 @@ UpdateInterval=200
 #           eventually on another faster computer.
 ParCheck=auto
 
+# Check for renamed and missing files (yes, no).
+#
+# Par-rename restores original file names using information stored
+# in par2-files. It also detects missing files (files listed in
+# par2-files but not present on disk). When enabled the par-rename is
+# performed as the first step of post-processing for every nzb-file.
+#
+# Par-rename is very fast and is highly recommended, especially if
+# unpack is disabled.
+ParRename=yes
+
 # Automatic par-repair after par-verification (yes, no).
 #
 # If option <ParCheck> is set to "Auto" or "Force" this option defines
@@ -1095,16 +1107,18 @@ ParRepair=yes
 # issues. Please apply the patches to libpar2 and recompile it.
 ParScan=auto
 
-# Check for renamed and missing files (yes, no).
+# Quick file verification during par-check (yes, no).
 #
-# Par-rename restores original file names using information stored
-# in par2-files. It also detects missing files (files listed in
-# par2-files but not present on disk). When enabled the par-rename is
-# performed as the first step of post-processing for every nzb-file.
+# If the option is active the files dowloaded without errors are quickly
+# verified by checking their checksums; quick verification is very fast 
+# because it doesn't require the reading of files from disk, NZBGet 
+# knows checksums of downloaded files and quickly compares them with 
+# checksums stored in the par-file. This feature requires a patched 
+# version of libpar2, see http://nzbget.net/libpar2 for details.
 #
-# Par-rename is very fast and is highly recommended, especially if
-# unpack is disabled.
-ParRename=yes
+# If the option is disabled the files are verified as usual. That's
+# slow. Use this if the quick verification doesn't work properly.
+ParQuick=yes
 
 # Files to ignore when looking for missing files.
 #
