options "ParIgnoreExt" and "ExtCleanupDisk" are now respected by par-check (in addition to being respected by par-rename): if all damaged or missing files are covered by these options then no par-repair is performed and the download assumed successful
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1071 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1120,15 +1120,15 @@ ParScan=auto
 # slow. Use this if the quick verification doesn't work properly.
 ParQuick=yes
 
-# Files to ignore when looking for missing files.
+# Files to ignore during par-check.
 #
-# List of file extensions or file names to ignore by par-rename. The
-# entries must be separated with commas. The entries can be file
-# extensions or any text the file name may end with.
+# List of file extensions or file names to ignore by par-rename and
+# par-check. The entries must be separated with commas. The entries
+# can be file extensions or any text the file name may end with.
 #
-# If par-rename detects missing files it will ignore files matching
-# this option and will not initiate par-check/repair. This avoids
-# time costing par-check/repair for unimportant files.
+# If par-rename or par-check detect missing or damaged files they
+# will ignore files matching this option and will not initiate
+# repair. This avoids time costing repair for unimportant files.
 #
 # NOTE: Files matching the option <ExtCleanupDisk> are ignored as well.
 #
@@ -1195,6 +1195,11 @@ ParCleanupQueue=yes
 # List of file extensions or file names to delete after successful
 # download. The entries must be separated with commas. The entries 
 # can be file extensions or any text the file name may end with.
+#
+# Files or extensions listed here are also ignored by par-rename
+# and par-check.
+#
+# NOTE: See also option <ParIgnoreExt>.
 #
 # Example: .par2, .sfv
 ExtCleanupDisk=.par2, .sfv, _brokenlog.txt
