added quick par verification for damaged (partially downloaded) files
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1074 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1109,8 +1109,8 @@ ParScan=auto
 
 # Quick file verification during par-check (yes, no).
 #
-# If the option is active the files dowloaded without errors are quickly
-# verified by checking their checksums; quick verification is very fast 
+# If the option is active the files are quickly verified using
+# checksums calculated during download; quick verification is very fast 
 # because it doesn't require the reading of files from disk, NZBGet 
 # knows checksums of downloaded files and quickly compares them with 
 # checksums stored in the par-file. This feature requires a patched 
