fixed: cleanup may leave some files undeleted (Mac OSX only)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1078 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/config.h.in
+++ b/config.h.in
@@ -3,6 +3,10 @@
 /* Define to 1 to include debug-code */
 #undef DEBUG
 
+/* Define to 1 if deleting of files during reading of directory is not
+   properly supported by OS */
+#undef DIRBROWSER_SNAPSHOT
+
 /* Define to 1 to not use curses */
 #undef DISABLE_CURSES
 
