--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1099,12 +1099,6 @@ ParRepair=yes
 #  Auto    - a limited scan is performed first. If the par-checker 
 #            detects missing files, it scans other files in the 
 #            directory until all required files are found.
-#
-# NOTE: For par-check/repair NZBGet uses library libpar2. The widely
-# used version 0.2 of the library has few bugs, sometimes causing
-# a crash of the program. This is especially true when using "full" or
-# "auto" par-scan. NZBGet is supplied with patches addressing these
-# issues. Please apply the patches to libpar2 and recompile it.
 ParScan=auto
 
 # Quick file verification during par-check (yes, no).
@@ -1113,8 +1107,7 @@ ParScan=auto
 # checksums calculated during download; quick verification is very fast 
 # because it doesn't require the reading of files from disk, NZBGet 
 # knows checksums of downloaded files and quickly compares them with 
-# checksums stored in the par-file. This feature requires a patched 
-# version of libpar2, see http://nzbget.net/libpar2 for details.
+# checksums stored in the par-file.
 #
 # If the option is disabled the files are verified as usual. That's
 # slow. Use this if the quick verification doesn't work properly.
@@ -1167,10 +1160,6 @@ HealthCheck=delete
 # affect the first stage of parcheck - verification of files. However the
 # verification speed is constant, it doesn't depend on files integrity and
 # therefore it is not necessary to limit the time needed for the first stage.
-#
-# NOTE: This option requires an extended version of libpar2 (the original
-# version doesn't support the cancelling of repairing). Please refer to
-# NZBGet's README for info on how to apply the patch to libpar2.
 ParTimeLimit=0
 
 # Pause download queue during check/repair (yes, no).
