suppressed certain warning types in VC++ project file (Windows)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1085 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.vcproj
+++ b/nzbget.vcproj
@@ -4,6 +4,7 @@
 	Version="8,00"
 	Name="nzbget"
 	ProjectGUID="{41BFB691-0127-4391-9629-F1BA6740DDFE}"
+	RootNamespace="nzbget"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -120,8 +121,9 @@
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
+				DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -196,8 +198,9 @@
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
+				DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
