added support for detection of bad downloads (fakes, etc.): extended queue-scripts with new event "UNPACK", scripts are called before unpack and have a chance to detect bad downloads before unpacking; queue-scripts and post-processing scripts can mark downloads as bad by printing special command; marked downloads become status "FAILURE/BAD" and are processed by the program as failures (triggering duplicate handling); scripts executed thereafter see the new status and can react accordingly (inform an indexer or a third-party automation tool); new env. var "NZBNA_DIRECTORY" passed to queue scripts
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1089 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1367,6 +1367,9 @@ SevenZipCmd=7z
 # parameter with name "myvar" and value "my value" will be associated
 # with nzb-file.
 #
+# To inform NZBGet about bad download:
+#   echo "[NZB] MARK=BAD";
+#
 # Return value: NZBGet processes the exit code returned by the script:
 #  93 - post-process successful (status = SUCCESS);
 #  94 - post-process failed (status = FAILURE);
@@ -1511,12 +1514,13 @@ ScanScript=
 #                   from nzb-directory this is the fullname with path.
 #                   If the file was added via web-interface it contains
 #                   only filename without path;
-#  NZBNA_EVENT    - describes why the script was called. Currently the
-#                   queue scripts are called only after adding nzb-files
-#                   to queue (NZBNA_EVENT=NZB_ADDED). In the future the
-#                   list of supported events may be extended. The script
-#                   MUST check that parameter to avoid conflicts with
-#                   future NZBGet versions;
+#  NZBNA_EVENT    - describes why the script was called:
+#                   NZB_ADDED - after adding nzb-files to queue;
+#                   UNPACK    - before unpacking.
+#                   In the future the list of supported events may be
+#                   extended. To avoid conflicts with future NZBGet
+#                   versions the script must exit if the parameter
+#                   has a value unknown to the script.
 #  NZBNA_CATEGORY - category of nzb-file (if assigned);
 #  NZBNA_NZBID    - id of the nzb-file. This ID can be used with 
 #                   calls to nzbget edit-command;
@@ -1530,7 +1534,13 @@ ScanScript=
 # options with predefined possible values (yes/no, etc.) the values are
 # passed always in lower case.
 #
-# Examples:
+# The script can printing special messages into standard output (which
+# is processed by NZBGet).
+#
+# To inform NZBGet about bad download:
+#   echo "[NZB] MARK=BAD";
+#
+# Examples of what the script can do:
 # 1) pausing nzb-file using file-id:
 # "$NZBOP_APPBIN" -c "$NZBOP_CONFIGFILE" -E G P $NZBNA_NZBID;
 # 2) setting category using nzb-name:
