updated description in config file template
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1093 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1515,8 +1515,11 @@ ScanScript=
 #                   If the file was added via web-interface it contains
 #                   only filename without path;
 #  NZBNA_EVENT    - describes why the script was called:
-#                   NZB_ADDED - after adding nzb-files to queue;
-#                   UNPACK    - before unpacking.
+#                   NZB_ADDED - after adding of nzb-file to queue;
+#                   FILE_DOWNLOADED - after a file included in nzb is
+#                   downloaded;
+#                   NZB_DOWNLOADED - after all files in nzb are downloaded
+#                   (before post-processing).
 #                   In the future the list of supported events may be
 #                   extended. To avoid conflicts with future NZBGet
 #                   versions the script must exit if the parameter
@@ -1536,6 +1539,13 @@ ScanScript=
 #
 # The script can printing special messages into standard output (which
 # is processed by NZBGet).
+#
+# To assign post-processing parameters:
+#   echo "[NZB] NZBPR_myvar=my value";
+#
+# The prefix "NZBPR_" will be removed. In this example a post-processing
+# parameter with name "myvar" and value "my value" will be associated
+# with nzb-file.
 #
 # To inform NZBGet about bad download:
 #   echo "[NZB] MARK=BAD";
