added option "EventInterval" allowing to reduce the number of calls of queue-scripts, which can be useful on slow systems
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1095 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1582,3 +1582,26 @@ ScriptOrder=
 #
 # NOTE: See also options <ParPauseQueue> and <UnpackPauseQueue>.
 ScriptPauseQueue=no
+
+# Minimum interval between calls of queue-scripts (seconds).
+#
+# Queue-scripts are executed during download, after every file included in
+# nzb-file is downloaded. If the files are small they may be downloaded
+# very fast causing queue-scripts to be working all the time. Sometimes
+# this may lead to a performance decrease on systems with slow CPUs.
+#
+# This option allows to reduce the number of calls of queue-scripts by
+# skipping "file-downloaded"-events if the previous call of queue-scripts
+# for the same download (nzb-file) were performed a short time ago
+# (as defined by the option).
+#
+# Value "-1" disables executing of queue-scripts on
+# "file-downloaded"-events. Scripts are still executed on events
+# "nzb-added" and "nzb-downloaded".
+#
+# NOTE: This options affects only queue-scripts and only
+# "file-downloaded"-events. Queue-scripts can be activated using
+# option <QueueScript> (for pure queue-scripts) or option <PostScript>
+# (for dual-mode scripts which act as queue- and post-processing-scripts
+# at the same time).
+EventInterval=0
