added new option "UrlTimeout" to set timeout for URL fetching and RSS feed fetching; renamed option "ConnectionTimeout" to "ArticleTimeout"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1109 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -723,8 +723,13 @@ Retries=3
 # Set the interval between retries (seconds).
 RetryInterval=10
 
-# Set connection timeout (seconds).
-ConnectionTimeout=60
+# Set connection timeout for article downloading (seconds).
+ArticleTimeout=60
+
+# Set connection timeout for URL fetching (seconds).
+#
+# This includes fetching of nzb-files via URLs and fetching of RSS feeds.
+UrlTimeout=60
 
 # Timeout until a download-thread should be killed (seconds).
 #
