--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1118,6 +1118,27 @@ ParScan=auto
 # slow. Use this if the quick verification doesn't work properly.
 ParQuick=yes
 
+# Memory limit for par-repair buffer (megabytes).
+#
+# Set the amount of RAM that the par-checker may use during repair. Having
+# the buffer as big as the total size of all damaged blocks allows for
+# the optimal repair speed. The option sets the maximum buffer size, the
+# allocated buffer can be smaller.
+#
+# If you have a lot of RAM set the option to few hundreds (MB) for the
+# best repair performance.
+ParBuffer=16
+
+# Number of threads to use during par-repair (1-99).
+#
+# On multi-core CPUs for the best speed set the option to the number of
+# logical cores (physical cores + hyper-threading units). If you want
+# to utilize the CPU to 100% you may need to add one or two additional threads
+# to compensate for wait intervals used for thread synchronization.
+#
+# On single-core CPUs use only one thread.
+ParThreads=1
+
 # Files to ignore during par-check.
 #
 # List of file extensions or file names to ignore by par-rename and
