added commands "PausePostProcess" and "UnpausePostProcess" to scheduler
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1124 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -973,21 +973,24 @@ UpdateInterval=200
 # Examples: "1-7", "1-5", "5,6", "1-5, 7".
 #Task1.WeekDays=1-7
 
-# Command to be executed ( PauseDownload, UnpauseDownload, PauseScan, UnpauseScan,
-# DownloadRate, Script, Process, ActivateServer, DeactivateServer, FetchFeed).
+# Command to be executed (PauseDownload, UnpauseDownload, PausePostProcess,
+# UnpausePostProcess, PauseScan, UnpauseScan, DownloadRate, Script, Process,
+# ActivateServer, DeactivateServer, FetchFeed).
 #
 # Possible commands:
-#   PauseDownload    - pause download;
-#   UnpauseDownload  - resume download;
-#   PauseScan        - pause scan of incoming nzb-directory;
-#   UnpauseScan      - resume scan of incoming nzb-directory;
-#   DownloadRate     - set download rate limit;
-#   Script           - execute one or multiple scheduler scripts. The scripts
-#                      must be written specially for NZBGet;
-#   Process          - execute an external (any) program;
-#   ActivateServer   - activate news-server;
-#   DeactivateServer - deactivate news-server;
-#   FetchFeed        - fetch RSS feed.
+#   PauseDownload      - pause download;
+#   UnpauseDownload    - resume download;
+#   PausePostProcess   - pause post-processing;
+#   UnpausePostProcess - resume post-processing;
+#   PauseScan          - pause scan of incoming nzb-directory;
+#   UnpauseScan        - resume scan of incoming nzb-directory;
+#   DownloadRate       - set download rate limit;
+#   Script             - execute one or multiple scheduler scripts. The scripts
+#                        must be written specially for NZBGet;
+#   Process            - execute an external (any) program;
+#   ActivateServer     - activate news-server;
+#   DeactivateServer   - deactivate news-server;
+#   FetchFeed          - fetch RSS feed.
 #
 # On start the program checks all tasks and determines current state
 # for download-pause, scan-pause, download-rate and active servers.
