when option "ContinuePartial" is active the current state is saved not more often than once per second instead of after every downloaded article; this significantly reduce the amount of disk writings on high download speeds
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1125 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -594,9 +594,10 @@ ReloadQueue=yes
 
 # Continue download of partially downloaded files (yes, no).
 #
-# If active the current state is saved after every article download and
-# reloaded after restart. This is about files included in download jobs (usually
-# rar-files), not about download-jobs (nzb-files) itself. Download-jobs are always
+# If active the current state (the info about what articles were already
+# downloaded) is saved every second and is reloaded after restart. This is
+# about files included in download jobs (usually rar-files), not about
+# download-jobs (nzb-files) itself. Download-jobs are always
 # continued regardless of that option.
 #
 # Disabling this option may slighlty reduce disk access and is
